Externalise ionic-tools

--- a/src/bootstrap/module.scss
+++ b/src/bootstrap/module.scss
@@ -3,10 +3,4 @@
 // @import "fonts";
 
 @import "../../bower_components/ionic/scss/ionic";
-
-@import "list";
-@import "tabs";
-
-.highlight {
-    font-weight: bold;
-}
+@import "../../bower_components/donkeycode-ionic-tools/scss/tools";
