--- a/src/home/templates/article.template.html
+++ b/src/home/templates/article.template.html
@@ -6,7 +6,7 @@
             scrollbar-y="false"
             delegate-handle="tab_header"
             class="scroll-view ionic-scroll tabs-header"
-            dc-common-tabs-header>
+            dc-tools-tabs-header>
                 <a class="tab-item active" ng-click="goToSlide(0)">Details</a>
                 <a class="tab-item" ng-click="goToSlide(1);">Sample</a>
         </ion-scroll>
@@ -18,7 +18,7 @@
                 First slide
 
                 <button class="button button-full button-royal"
-                    dc-common-confirm-click="Are you sure ?"
+                    dc-tools-confirm-click="Are you sure ?"
                     confirmed-click="doIt()"
                     confirm-click-title="Title of alert">
                     Confirmed click
